# aomi-monad-oneshot

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  aomi.toml
app/src/: abi.rs  chain.rs  lib.rs  rpc.rs
src/: tool.rs
ui/: .env.example  package.json  pnpm-lock.yaml
ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/components/: AomiMark.tsx  StarterChips.tsx  banners.tsx  chat.tsx  header.tsx
ui/lib/: aomi-chat.ts  chains.ts  wagmi.ts
