[package]
name = "monad-oneshot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = "=3.0.2"
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
